--- a/src/html/apres-midi.html
+++ b/src/html/apres-midi.html
@@ -11,17 +11,21 @@
   </head>
 
   <body>
-    <header>
-      <a href="./index.html"  class="logo">
+    <a href="#menu" class="skip-link">Aller au menu</a>
+    <a href="#main" class="skip-link">Aller au contenu principal</a>
+    <a href="#footer" class="skip-link">Aller au pied de page</a>
+
+    <header id="menu">
+      <a href="./index.html" class="logo" aria-label="Retour à la page d'accueil Mon Petit Geste">
         <img
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="Logo de mon petit geste, main qui tien un coeur"
+          alt="Logo de mon Petit Geste"
         />
-        <h2 class="site-name">
+        <h1 class="site-name">
           <span class="site-title">Mon Petit</span>
           <strong class="site-subtitle">Geste</strong>
-        </h2>
+        </h1>
       </a>
 
       <nav class="nav" aria-label="Navigation principale">
@@ -33,14 +37,15 @@
       </nav>
     </header>
 
-    <main class="principal">
+    <main class="principal" id="main">
       <section class="section-container" aria-labelledby="apres_midi">
           <svg
             width="101"
             height="101"
             viewBox="0 0 101 101"
             fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true">
             <path
               d="M51 75.5C64.8071 75.5 76 64.3071 76 50.5C76 36.6929 64.8071 25.5 51 25.5C37.1929 25.5 26 36.6929 26 50.5C26 64.3071 37.1929 75.5 51 75.5Z"
               stroke="#FFFFFF"
@@ -113,6 +118,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <path
                 d="M79.2033 62.4849L65.4219 57.0473C64.8331 56.8163 64.1788 56.7676 63.5574 56.9086C62.9361 57.0495 62.3812 57.3725 61.9765 57.8289L55.8733 64.6939C46.2948 60.5362 38.5863 53.4395 34.0702 44.6212L41.527 39.0024C42.0237 38.6304 42.3753 38.1196 42.5285 37.5473C42.6817 36.975 42.6281 36.3723 42.376 35.8304L36.4697 23.1427C36.1929 22.5586 35.7035 22.0818 35.0858 21.7943C34.4681 21.5068 33.7607 21.4268 33.0858 21.5681L20.2887 24.2869C19.638 24.4252 19.0574 24.7625 18.6417 25.2438C18.2261 25.725 17.9999 26.3217 18 26.9366C18 55.9937 43.5819 79.5 75.0947 79.5C75.7628 79.5004 76.4113 79.2922 76.9342 78.9095C77.4572 78.5268 77.8238 77.9922 77.9741 77.3929L80.9273 65.6115C81.0797 64.9871 80.9909 64.3333 80.6763 63.7626C80.3616 63.192 79.8408 62.7401 79.2033 62.4849Z"
@@ -133,6 +139,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#clip0_28_1243)">
                 <path
@@ -165,6 +172,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <path
                 d="M88.0348 12.9679C89.2688 13.8819 90 15.3442 90 16.8827V27.8503V68.0648C90 74.7977 83.4492 80.251 75.375 80.251C67.3008 80.251 60.75 74.7977 60.75 68.0648C60.75 61.3319 67.3008 55.8786 75.375 55.8786C77.0812 55.8786 78.7266 56.1223 80.25 56.5793V34.4004L41.25 46.0992V77.8138C41.25 84.5467 34.6992 90 26.625 90C18.5508 90 12 84.5467 12 77.8138C12 71.0809 18.5508 65.6276 26.625 65.6276C28.3312 65.6276 29.9766 65.8713 31.5 66.3283V42.4738V31.5062C31.5 29.3583 32.9168 27.4543 34.9734 26.8297L83.7234 12.2063C85.2012 11.7645 86.8008 12.0387 88.0348 12.9679Z"
@@ -185,6 +193,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <path
                 d="M35.5496 23.6857L34.0465 28.1429H23.25C18.148 28.1429 14 32.2429 14 37.2857V73.8571C14 78.9 18.148 83 23.25 83H78.75C83.852 83 88 78.9 88 73.8571V37.2857C88 32.2429 83.852 28.1429 78.75 28.1429H67.9535L66.4504 23.6857C65.5109 20.8857 62.866 19 59.8742 19H42.1258C39.134 19 36.4891 20.8857 35.5496 23.6857ZM51 41.8571C54.6799 41.8571 58.209 43.302 60.8111 45.874C63.4132 48.4459 64.875 51.9342 64.875 55.5714C64.875 59.2087 63.4132 62.697 60.8111 65.2689C58.209 67.8408 54.6799 69.2857 51 69.2857C47.3201 69.2857 43.791 67.8408 41.1889 65.2689C38.5868 62.697 37.125 59.2087 37.125 55.5714C37.125 51.9342 38.5868 48.4459 41.1889 45.874C43.791 43.302 47.3201 41.8571 51 41.8571Z"
@@ -208,6 +217,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#clip0_28_685)">
                 <path
@@ -241,6 +251,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <path
                 d="M77.3571 14C75.0357 14 58.7857 18.625 58.7857 39.4375V55.625C58.7857 60.727 62.9498 64.875 68.0714 64.875H72.7143V83.375C72.7143 85.9332 74.7891 88 77.3571 88C79.9252 88 82 85.9332 82 83.375V64.875V48.6875V18.625C82 16.0668 79.9252 14 77.3571 14ZM26.2857 16.3125C26.2857 15.1273 25.4007 14.1445 24.2109 14.0145C23.0212 13.8844 21.9621 14.6648 21.7009 15.8066L17.3047 35.5063C17.1016 36.4168 17 37.3418 17 38.2668C17 44.9008 22.0926 50.3496 28.6071 50.9422V83.375C28.6071 85.9332 30.6819 88 33.25 88C35.8181 88 37.8929 85.9332 37.8929 83.375V50.9422C44.4074 50.3496 49.5 44.9008 49.5 38.2668C49.5 37.3418 49.3984 36.4168 49.1953 35.5063L44.7991 15.8066C44.5379 14.6504 43.4498 13.8844 42.2746 14.0145C41.0993 14.1445 40.2143 15.1273 40.2143 16.3125V35.7086C40.2143 36.4891 39.5759 37.125 38.7924 37.125C38.0525 37.125 37.4431 36.5613 37.3705 35.8242L35.5569 16.1102C35.4554 14.9105 34.4542 14 33.25 14C32.0458 14 31.0446 14.9105 30.9431 16.1102L29.144 35.8242C29.0714 36.5613 28.4621 37.125 27.7221 37.125C26.9386 37.125 26.3002 36.4891 26.3002 35.7086L26.2857 16.3125ZM33.2935 38.2812H33.25H33.2065L33.25 38.1801L33.2935 38.2812Z"
@@ -263,6 +274,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <path
                 d="M23.3056 25.8125C19.2109 25.8125 15.8889 29.1299 15.8889 33.2188V50.5H30.7222V33.2188C30.7222 29.1299 27.4002 25.8125 23.3056 25.8125ZM6 33.2188C6 23.6678 13.7411 15.9375 23.3056 15.9375C32.87 15.9375 40.6111 23.6678 40.6111 33.2188V67.7812C40.6111 77.3322 32.87 85.0625 23.3056 85.0625C13.7411 85.0625 6 77.3322 6 67.7812V33.2188ZM91.7398 72.6262C90.6427 74.524 88.0778 74.6475 86.5172 73.1045L57.5304 44.1584C55.9852 42.6154 56.0934 40.0387 58.0094 38.9432C61.625 36.8756 65.8123 35.6875 70.2778 35.6875C83.9368 35.6875 95 46.7352 95 60.375C95 64.8342 93.8103 69.0156 91.7398 72.6262ZM82.5462 81.8068C78.9306 83.8744 74.7432 85.0625 70.2778 85.0625C56.6188 85.0625 45.5556 74.0148 45.5556 60.375C45.5556 55.9158 46.7453 51.7344 48.8158 48.1238C49.9129 46.226 52.4778 46.1025 54.0384 47.6455L83.0252 76.5916C84.5703 78.1346 84.4622 80.7113 82.5462 81.8068Z"
@@ -285,6 +297,7 @@
               viewBox="0 0 100 100"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <path
                 d="M40.3333 23.807C40.3333 22.6275 39.7943 21.5195 38.8599 20.8047C37.9255 20.0898 36.7156 19.8277 35.5656 20.1136L14.0151 25.475C11.4635 26.1064 9.66667 28.3939 9.66667 31.015V73.3695H5.83333C3.71302 73.3695 2 75.0732 2 77.182C2 79.2908 3.71302 80.9945 5.83333 80.9945H13.5H36.5H40.3333V77.182V23.807ZM32.6667 50.4945C32.6667 52.6033 31.3849 54.307 29.7917 54.307C28.1984 54.307 26.9167 52.6033 26.9167 50.4945C26.9167 48.3857 28.1984 46.682 29.7917 46.682C31.3849 46.682 32.6667 48.3857 32.6667 50.4945ZM44.1667 35.2445H55.6667V77.182C55.6667 79.2908 57.3797 80.9945 59.5 80.9945H67.1667C69.287 80.9945 71 79.2908 71 77.182C71 75.0732 69.287 73.3695 67.1667 73.3695H63.3333V35.2445C63.3333 31.0388 59.8953 27.6195 55.6667 27.6195H44.1667V35.2445Z"
@@ -309,6 +322,7 @@
               viewBox="0 0 101 101"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#clip0_16_406)">
                 <path
@@ -333,28 +347,27 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo">
+    <footer id="footer">
+      <a href="./index.html" class="logo" aria-label="Retour à la page d'accueil Mon Petit Geste">
         <img
-          aria-hidden="true"
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="Logo de mon petit geste, main qui tien un coeur"
+          alt="Logo de mon Petit Geste"
         />
-        <h2 class="site-name">
+        <h1 class="site-name">
           <span class="site-title">Mon Petit</span>
           <strong class="site-subtitle">Geste</strong>
-        </h2>
+        </h1>
       </a>
-    
-      <ul class="footer-lien" role="navigation" aria-label="pied de page">
-        <li><a href="./matin.html">Le matin</a></li>
-        <li><a href="./apres-midi.html">L'après midi</a></li>
-        <li><a href="./soir.html">Le soir</a></li>
-        <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
-        <li><a href="./mentions-legales.html" >Mentions légales</a></li>
-      </ul>
-
+      <nav aria-label="Pied de page">
+        <ul>
+          <li><a href="./matin.html">Le matin</a></li>
+          <li><a href="./apres-midi.html">L'après midi</a></li>
+          <li><a href="./soir.html">Le soir</a></li>
+          <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
+          <li><a href="./mentions-legales.html">Mentions légales</a></li>
+        </ul>
+      </nav>
       <p>2025 © Kyongsong</p>
     </footer>
   </body>
