--- a/src/html/mentions-legales.html
+++ b/src/html/mentions-legales.html
@@ -14,30 +14,33 @@
   </head>
 
   <body>
-    <header>
-      <span class="container">
-        <a href="./index.html" class="logo">
-          <img
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
-        </a>
+    <a href="#menu" class="skip-link">Aller au menu</a>
+    <a href="#main" class="skip-link">Aller au contenu principal</a>
+    <a href="#footer" class="skip-link">Aller au pied de page</a>
 
-        <nav class="nav" aria-label="Navigation principale">
-          <ul>
-            <li><a href="./matin.html">Le matin</a></li>
-            <li><a href="./apres-midi.html">L'après-midi</a></li>
-            <li><a href="./soir.html">Le soir</a></li>
-          </ul>
-        </nav>
-      </span>
+    <header id="menu">
+      <a href="./index.html" class="logo" aria-label="Retour à la page d'accueil Mon Petit Geste">
+        <img
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="Logo de mon Petit Geste"
+        />
+        <h1 class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
+        </h1>
+      </a>
+
+      <nav class="nav" aria-label="Navigation principale">
+        <ul>
+          <li><a href="./matin.html">Le matin</a></li>
+          <li><a href="./apres-midi.html">L'après-midi</a></li>
+          <li><a href="./soir.html">Le soir</a></li>
+        </ul>
+      </nav>
     </header>
-    <main class="mentions-legales">
+
+    <main class="mentions-legales" id="main">
       <section>
         <h1>Mentions légales</h1>
         <p>Site Internet : <a href="./index.html">Mon petit geste</a></p>
@@ -84,30 +87,28 @@
       </section>
     </main>
 
-    <footer>
-      <span class="container">
-        <a href="./index.html" class="logo">
-          <img
-            aria-hidden="true"
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
-        </a>
-        <p>2025 © Kyongsong</p>
-      </span>
-
-      <ul class="footer-lien" role="navigation" aria-label="pied de page">
-        <li><a href="./matin.html">Le matin</a></li>
-        <li><a href="./apres-midi.html">L'après midi</a></li>
-        <li><a href="./soir.html">Le soir</a></li>
-        <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
-        <li><a href="./mentions-legales.html">Mentions légales</a></li>
-      </ul>
+    <footer id="footer">
+      <a href="./index.html" class="logo" aria-label="Retour à la page d'accueil Mon Petit Geste">
+        <img
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="Logo de mon Petit Geste"
+        />
+        <h1 class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
+        </h1>
+      </a>
+      <nav aria-label="Pied de page">
+        <ul>
+          <li><a href="./matin.html">Le matin</a></li>
+          <li><a href="./apres-midi.html">L'après midi</a></li>
+          <li><a href="./soir.html">Le soir</a></li>
+          <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
+          <li><a href="./mentions-legales.html">Mentions légales</a></li>
+        </ul>
+      </nav>
+      <p>2025 © Kyongsong</p>
     </footer>
   </body>
 </html>
