remove wrong css import

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Cette page est une aide pratique au quotidien des personnes âgées, un guide général avec accès au guide du matin, de l'après-midi et du soir."/>
     <title>Accueil</title>
     <link rel="stylesheet" href="../css/base.css" />
+    <link rel="icon" href="../assets/svg/favicon.svg" type="image/svg+xml" />
   </head>
 
   <body>
