modif title organisation

--- a/src/html/mentions-legales.html
+++ b/src/html/mentions-legales.html
@@ -40,8 +40,10 @@
     </header>
 
     <main class="mentions-legales" id="main">
+
+      <h1>Mentions légales</h1>
       <section>
-        <h1>Mentions légales</h1>
+        <h2>Identification des responsables</h2>
         <p>Site Internet : <a href="./index.html">Mon petit geste</a></p>
         <p>Éditeur : Kyongsong</p>
         <p>Adresse : 4 Rue des Petits Champs, 75001 Paris, France</p>
@@ -52,34 +54,34 @@
         <p>Statut juridique : SARL, société à responsabilité limitée</p>
         <p>Hébergement :</p>
         <p>
-          Ce site est hébergé par : GitHub Pages – un service de GitHub, Inc. 88
+          Ce site est hébergé par : GitHub Pages - un service de GitHub, Inc. 88
           Colin P. Kelly Jr. Street, San Francisco, CA 94107, États-Unis.
         </p>
-        <p>Téléphone : <a href="tel:+33 1 23 45 67 89">+33 1 23 45 67 89</a></p>
+        <p>Téléphone : <a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
       </section>
       <section>
-        <h1>Propriété intellectuelle</h1>
+        <h2>Propriété intellectuelle</h2>
         <p>
           Le site Mon petit geste ainsi que tous ses contenus (textes, images,
-          éléments graphiques, icônes) sont protégés par le droit d’auteur.
+          éléments graphiques, icônes) sont protégés par le droit d'auteur.
           Toute reproduction, représentation, modification ou utilisation, même
           partielle, est interdite sans autorisation préalable de Kyongsong.
         </p>
       </section>
       <section>
-        <h1>Données personnelles</h1>
+        <h2>Données personnelles</h2>
         <p>
           Ce site ne collecte aucune donnée personnelle sans votre consentement
-          explicite. Aucune information n’est stockée, partagée ou utilisée à
+          explicite. Aucune information n'est stockée, partagée ou utilisée à
           des fins commerciales. Aucune fonctionnalité de connexion, de
-          formulaire ou de suivi publicitaire n’est intégrée au site.
+          formulaire ou de suivi publicitaire n'est intégrée au site.
         </p>
       </section>
       <section>
-        <h1>Accessibilité</h1>
+        <h2>Accessibilité</h2>
         <p>
           Mon petit geste a été conçu dans une volonté de simplicité et
-          d’accessibilité, notamment pour les personnes âgées ou en situation de
+          d'accessibilité, notamment pour les personnes âgées ou en situation de
           fragilité. Nous faisons de notre mieux pour offrir une navigation
           claire, lisible et adaptée aux besoins de chacun.
         </p>
