change content and add doc

--- a/src/html/apres-midi.html
+++ b/src/html/apres-midi.html
@@ -103,9 +103,7 @@
           L'après-midi
         </h1>
         <p class="section-text">
-          L'après-midi est le bon moment pour bouger un peu, s’occuper
-          l’esprit ou faire une pause bien méritée. Voici quelques idées pour
-          rester en forme et bien dans sa tête.
+          C’est le moment idéal pour se détendre, faire bouger son corps ou stimuler son esprit. Que ce soit pour se changer les idées ou faire le plein d’énergie, voici des idées simples pour un après-midi équilibré.
         </p>
       </section>
       <section class="section-actions">
@@ -126,9 +124,7 @@
             </svg>
             <h3>Appeler un proche</h3>
             <p>
-              Entendre la voix d’un être cher fait toujours du bien. Prendre
-              quelques minutes pour appeler un proche permet de garder le lien,
-              de partager un moment chaleureux et de se sentir entouré.
+              Un simple appel peut illuminer la journée. Échanger quelques mots, rire ensemble, partager un souvenir… ça fait du bien au cœur et ça renforce les liens.
             </p>
         </article>
         <article class="advice">
@@ -159,9 +155,7 @@
             </svg>
             <h3>Lire ou faire un puzzle</h3>
             <p>
-              Lire quelques pages ou s’amuser avec un puzzle, c’est bon pour
-              l’esprit. Ces petites activités calmes aident à se détendre tout
-              en faisant travailler la mémoire et la concentration.
+              Plonge dans un bon livre ou assemble un puzzle coloré. Ces petits moments de calme aident à apaiser l’esprit tout en gardant la mémoire en éveil.
             </p>
         </article>
         <article class="advice">
@@ -180,9 +174,7 @@
             </svg>
             <h3>Écouter de la musique</h3>
             <p>
-              Une jolie mélodie peut changer l’ambiance d’une journée. Écouter
-              une chanson aimée apaise, réveille des souvenirs et apporte de la
-              joie.
+              Laisse une mélodie adoucir l’après-midi. Une chanson qu’on aime, un air familier, et l’ambiance change. Ça apaise, ça réconforte, et parfois ça donne envie de danser.
             </p>
         </article>
         <article class="advice">
@@ -201,9 +193,7 @@
             </svg>
             <h3>Regarder des photos</h3>
             <p>
-              Replonger dans ses souvenirs, c’est réconfortant. Feuilleter un
-              album ou regarder de vieilles photos permet de revivre de bons
-              moments et de se sentir proche de ses proches.
+              Feuilleter un album ou revoir d’anciens clichés, c’est retrouver un peu de bonheur passé. Ces souvenirs ravivent les émotions et rapprochent de ceux qu’on aime.
             </p>
         </article>
       </section>
@@ -237,10 +227,7 @@
             </svg>
             <h3>Boire de l'eau</h3>
             <p>
-              Le corps a besoin d’eau pour bien fonctionner. Même si on n’a pas
-              soif, penser à boire un verre d’eau régulièrement aide à rester en
-              forme et à éviter les coups de fatigue, surtout en période de
-              forte chaleur.
+              Pense à t’hydrater régulièrement. Même sans soif, un verre d’eau fraîche fait du bien, surtout quand il fait chaud ou qu’on est fatigué.
             </p>
         </article>
         <article class="advice">
@@ -259,10 +246,7 @@
             </svg>
             <h3>Manger son déjeuner</h3>
             <p>
-              Un bon repas aide à garder de l’énergie pour le reste de la
-              journée. Manger à heures fixes, en prenant son temps, et si
-              possible dans une ambiance agréable, fait du bien au corps et au
-              moral.
+              Un bon déjeuner, c’est recharger ses batteries. Prends ton temps, installe-toi confortablement et savoure ton repas. C’est un vrai moment pour soi.
             </p>
         </article>
 
@@ -280,11 +264,9 @@
                 fill="#00519C"
               />
             </svg>
-            <h3>Prendre ses médicaments (si besoin)</h3>
+            <h3>Prendre ses médicaments</h3>
             <p>
-              Ne pas oublier ses traitements, c’est essentiel pour sa santé. Les
-              prendre toujours à la même heure aide à ne pas les oublier. Une
-              petite alarme peut aussi aider.
+              Ne laisse pas l’oubli mettre ta santé en pause. Prendre ses traitements à l’heure, c’est une habitude essentielle. Une alarme ou un pense-bête peut faire toute la différence.
             </p>
           </span>
         </article>
@@ -309,8 +291,7 @@
             </svg>
             <h3>Aérer la pièce</h3>
             <p>
-              Un peu d’air frais fait du bien. Ouvrir la fenêtre quelques
-              minutes aide à mieux respirer et rend l’ambiance plus agréable.
+              Un bol d’air frais, c’est un petit geste qui change tout. Ouvrir les fenêtres quelques minutes permet de renouveler l’air et de se sentir mieux instantanément.
             </p>
         </article>
 
@@ -341,7 +322,7 @@
               </defs>
             </svg>
             <h3>Faire de l'exercice</h3>
-            <p>Bougez, remuez, dansez !</p>
+            <p>Pas besoin de sport intensif ! Quelques mouvements, des pas de danse, un peu d’étirement… L’important, c’est de bouger et de sentir son corps en action.</p>
         </article>
       </section>
     </main>
