--- a/src/html/matin.html
+++ b/src/html/matin.html
@@ -55,8 +55,7 @@
           Le matin
         </h1>
         <p class="section-text">
-          La routine du matin, le rituel le plus important de la journée pour
-          bien se préparer et commencer sa journée !
+          Le matin, tout recommence. C’est le moment parfait pour prendre soin de soi, se recentrer, et se préparer à vivre pleinement sa journée. Une bonne routine, c’est une clé pour démarrer du bon pied, avec énergie et sérénité.
         </p>
       </section>
       <section class="section-actions">
@@ -77,7 +76,7 @@
           </svg>
           <h3>Se laver</h3>
           <p>
-            Se laver avec de l'eau et du savon est important, pensez à frotter
+            Commence ta journée en te rafraîchissant : une douche, un coup d’eau sur le visage, un bon savon… Rien de mieux pour se sentir propre et réveillé. C’est ton premier geste bien-être.
           </p>
         </article>
         <article class="advice">
@@ -108,8 +107,7 @@
             </svg>
             <h3>Mettre des vêtements propres</h3>
             <p>
-              Rien de mieux pour se sentir bien : les sous-vêtements puis les
-              vêtements.
+              Choisis des habits qui te font te sentir à l’aise et confiant. Des sous-vêtements propres, une tenue adaptée… et tu es prêt à affronter le monde !
             </p>
         </article>
         <article class="advice">
@@ -148,8 +146,7 @@
             </svg>
             <h3>Se brosser les dents</h3>
             <p>
-              À l'aide du dentifrice qui sera déposé sur la brosse à dent,
-              pensez à frotter de haut en bas puis rincez à l'eau claire.
+              Un sourire propre, c’est un esprit léger. Brosse bien toutes les dents, prends ton temps, et rince à l’eau claire. C’est simple, rapide, et ça change tout.
             </p>
         </article>
         <article class="advice">
@@ -167,7 +164,7 @@
               />
             </svg>
             <h3>Se coiffer</h3>
-            <p>À l'aide de sa brosse à cheveux, se coiffer !</p>
+            <p>Un petit coup de brosse, et hop, te voilà prêt·e. Se coiffer, c’est aussi prendre soin de soi et affirmer son style, même discret.</p>
         </article>
       </section>
       <section class="section-actions">
@@ -199,7 +196,7 @@
               </defs>
             </svg>
             <h3>Boire de l'eau</h3>
-            <p>Bien s'hydrater et boir 1,5 litre d'eau</p>
+            <p>Un grand verre d’eau au réveil, et ton corps te dit merci. Hydrater ton organisme dès le matin, c’est réveiller l’intérieur tout en douceur.</p>
         </article>
         <article class="advice">
             <svg
@@ -217,7 +214,7 @@
             </svg>
             <h3>Manger son petit déjeuner</h3>
             <p>
-              Quelques tartines, un café ou thé pour bien commencer la journée.
+              Un bon petit déjeuner, c’est plus qu’un repas : c’est ton carburant. Tartines, fruits, boisson chaude… choisis ce que tu aimes et savoure ce moment.
             </p>
         </article>
         <article class="advice">
@@ -247,7 +244,7 @@
               </defs>
             </svg>
             <h3>Faire de l'exercice</h3>
-            <p>Bougez, remuez, dansez !</p>
+            <p>Pas besoin d’en faire trop : quelques étirements, une chanson qui te fait danser, un peu de mouvement pour activer ton corps. Ça donne la pêche !</p>
         </article>
       </section>
     </main>
