--- a/src/html/soir.html
+++ b/src/html/soir.html
@@ -53,7 +53,7 @@
         </svg>
         <h1 class="section-title" aria-label="Le rituel du soir" id="soir">Le soir</h1>
         <p class="section-text">
-          La routine du soir, pour bien recharger ses batteries !
+          La fin de journée est un moment précieux pour ralentir, prendre soin de soi et se préparer à une bonne nuit de repos. Voici les bons réflexes à adopter.
         </p>
       </section>
       <section class="section-actions">
@@ -73,7 +73,7 @@
               />
             </svg>
             <h3>Se reposer</h3>
-            <p>S'assoir sur le canapé, s'assoir sur son balcon ou terrasse.</p>
+            <p>Installe-toi confortablement sur le canapé, sur un fauteuil ou même sur ton balcon. Prendre un moment pour souffler aide à relâcher la pression de la journée.</p>
         </article>
         <article class="advice">
             <svg
@@ -91,8 +91,7 @@
             </svg>
             <h3>Dîner</h3>
             <p>
-              Pensez à manger équilibré : légumes, fruits et poisson pour le
-              soir.
+              Un repas équilibré, c’est la clé pour bien dormir. Opte pour des légumes, un peu de poisson et des fruits. C’est léger, savoureux et bon pour l’organisme.
             </p>
         </article>
         <article class="advice">
@@ -121,7 +120,7 @@
               </defs>
             </svg>
             <h3>Boire de l'eau</h3>
-            <p>Bien s'hydrater et boir 1,5 litre d'eau</p>
+            <p>Même le soir, ton corps a besoin d’hydratation. Bois un verre d’eau avant de te coucher, surtout si tu n’as pas assez bu dans la journée.</p>
         </article>
 
         <article class="advice">
@@ -160,8 +159,7 @@
             </svg>
             <h3>Se brosser les dents</h3>
             <p>
-              À l'aide du dentifrice qui sera déposé sur la brosse à dent,
-              pensez à frotter de haut en bas puis rincez à l'eau claire.
+              Un petit geste essentiel avant de dormir. Dépose un peu de dentifrice sur ta brosse, puis frotte doucement de haut en bas. Rince bien à l’eau claire.
             </p>
         </article>
       </section>
@@ -195,8 +193,7 @@
             </svg>
             <h3>Vérouiller les portes et fenêtres</h3>
             <p>
-              Pensez à vérifier que la clé et bien dans la porte et fermée à
-              double tours, que les fenêtres sont aussi fermées.
+              Un dernier tour dans la maison pour bien dormir l’esprit tranquille. Assure-toi que la porte est bien verrouillée à double tour et que toutes les fenêtres sont bien fermées.
             </p>
         </article>
         <article class="advice">
@@ -215,26 +212,8 @@
             </svg>
             <h3>Éteindre les appareils électriques et le gaz</h3>
             <p>
-              Pensez à éteindre les plaques de cuisson ou coupez le gaz si
-              besoin.
+              Jette un œil aux plaques de cuisson, au four, et aux appareils électriques. Si tu utilises du gaz, pense à le couper. Mieux vaut prévenir que guérir.
             </p>
-        </article>
-        <article class="advice">
-            <svg
-              width="100"
-              height="100"
-              viewBox="0 0 100 100"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-hidden="true"
-            >
-              <path
-                d="M88.0944 58.7369C87.6114 59.4718 86.953 60.0748 86.1787 60.4917C85.4045 60.9086 84.5386 61.1263 83.6592 61.125H77.0625V71.75C77.0625 72.4545 76.7826 73.1301 76.2845 73.6283C75.7864 74.1264 75.1107 74.4062 74.4062 74.4062C73.7018 74.4062 73.0261 74.1264 72.528 73.6283C72.0299 73.1301 71.75 72.4545 71.75 71.75V61.125H53.1563V77.0625H61.125C61.8295 77.0625 62.5051 77.3424 63.0033 77.8405C63.5014 78.3386 63.7812 79.0143 63.7812 79.7188C63.7812 80.4232 63.5014 81.0989 63.0033 81.597C62.5051 82.0951 61.8295 82.375 61.125 82.375H39.875C39.1705 82.375 38.4949 82.0951 37.9968 81.597C37.4986 81.0989 37.2188 80.4232 37.2188 79.7188C37.2188 79.0143 37.4986 78.3386 37.9968 77.8405C38.4949 77.3424 39.1705 77.0625 39.875 77.0625H47.8438V61.125H17.3408C16.4617 61.125 15.5963 60.9069 14.8222 60.4901C14.0481 60.0733 13.3896 59.471 12.9057 58.737C12.4217 58.0031 12.1275 57.1605 12.0493 56.2848C11.9712 55.4092 12.1116 54.5278 12.458 53.7198L26.1186 21.8448C26.5275 20.8887 27.2083 20.0739 28.0765 19.5014C28.9446 18.929 29.9617 18.6243 31.0016 18.625H69.9984C71.0383 18.6242 72.0554 18.929 72.9236 19.5014C73.7917 20.0739 74.4725 20.8887 74.8814 21.8448L88.5421 53.7198C88.8896 54.5275 89.0307 55.4091 88.9525 56.2849C88.8744 57.1608 88.5795 58.0034 88.0944 58.7369Z"
-                fill="#005A9C"
-              />
-            </svg>
-            <h3>Allumer la veilleuse</h3>
-            <p>Mettre une lumière tamisée pour se préparer au sommeil.</p>
         </article>
         <article class="advice">
             <svg
@@ -264,8 +243,7 @@
             </svg>
             <h3>Préparer un réveil</h3>
             <p>
-              Pensez à programmer une sonnerie pour vous réveiller avant 9h, si
-              nécessaire.
+              Un dernier tour dans la maison pour bien dormir l’esprit tranquille. Assure-toi que la porte est bien verrouillée à double tour et que toutes les fenêtres sont bien fermées.
             </p>
         </article>
       </section>
